新增管理组件，优化登录页

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
         <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
         <link rel="stylesheet" href="css/combine.css">
     </head>
-    <body class="hold-transition skin-black sidebar-mini" style="background: url(https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1494476172762&di=f7a3a6a7ee401c86446e9104121e275d&imgtype=0&src=http%3A%2F%2Fwww.33lc.com%2Farticle%2FUploadPic%2F2012-9%2F20129169182885126.jpg); background-repeat: no-repeat; background-size: 100% 145%;">
+    <body class="hold-transition skin-black sidebar-mini">
         <div ui-view="container"></div>
     </body>
     <!-- build:js js/base.js -->
